fixed grid spacing. added hover effect

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,10 +39,12 @@ body{
 
 #container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, 300px);
+    grid-gap: 0;
+    grid-template-columns: repeat(auto-fit, 275px);
     grid-template-rows: 350px 350px 350px 350px;
 
     justify-content: center;
+    align-items: center;
 
 
 }
@@ -58,6 +60,11 @@ body{
     border: 1px solid black;
     border-radius: 20px;
 
+}
+.projCard:hover{
+    border:2px solid #209710;
+
+    cursor: pointer;
 }
 .projCard img{
     width:200px;
